--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <nav>
       <ul class="navbar">
-        <li><a href="privacyPolicy.html">Privacy Policy</a></li>
+        <li><a href="/privacyPolicy.html">Privacy Policy</a></li>
       </ul>
     </nav>
   </body>
