--- a/privacyPolicy.html
+++ b/privacyPolicy.html
@@ -22,8 +22,7 @@
       <h2>1. Introduction</h2>
       <hr />
       <p>
-        Welcome to Bookmarks Link Directory (“we,” “us,” or “our”), a minimal
-        expense tracker. Bookmarks Link Directory does not require an account
+        Welcome to Bookmarks Link Directory (“we,” “us,” or “our”), a Link Directory. Bookmarks Link Directory does not require an account
         and does not send your data to any servers we control. Your expenses and
         settings are stored locally on your device using the browser’s local
         storage.
@@ -43,8 +42,7 @@
       <h3>2.1 Data Stored on Your Device</h3>
       <p>
         Expense Data: amounts, categories, notes, and timestamps you enter—saved
-        only via local storage on your device. Settings: preferences like
-        currency or theme—also saved locally.
+        only via local storage on your device.
       </p>
     </div>
 
@@ -84,7 +82,7 @@
       <h2>7. Children’s Privacy</h2>
       <hr />
       <p>
-        Bookmarks Link Directory is a general-purpose finance tool and is not
+        Bookmarks Link Directory is a general-purpose Link Directory and is not
         directed to children. We do not knowingly collect any personal
         information from children.
       </p>
